Fix failing tests and route every input epilogue through InputCompletionService
Three unrelated causes behind the failures:

CardFreezeTest still expected 44 Card fields after colorIdentity was added.
The copy constructor already copied it, so only the tripwire was stale.

Kormus Bell relied on the loader-derived land colour that "Make lands
colourless and carry colour identity for display only" removed, so its
animated Swamps were colourless and Bad Moon no longer pumped them.
AllLandsAreCreaturesEffect gained an optional colour: null for Living Lands
and Nature's Revolt, which say only "1/1 creatures", and BLACK for Kormus
Bell's "1/1 black creatures" (a land has no mana cost and so is colourless
on its own, CR 202.2). Filling it into the accumulator alone was not enough
— Bad Moon is a layer-6 effect whose colour predicate reads the layer-5
state — so the effect now also classifies as a colour-setting L5
contribution (CR 105.3/613.1e), harvested unmanaged so its handler still
runs in the accumulator pass for base P/T and creature-ness.

Mirror of Fate and Thieves' Auction ended their input handlers with a
hand-rolled tail instead of an InputCompletionService epilogue, leaving the
stack entry parked: the spell's remaining effects were dropped and
deferPlayerLossCheck stayed wedged so nobody could lose again. The Liliana
Vess case was a test bug — GameTestHarness.ensurePriority clears any open
prompt, so the second (expected-to-throw) activation stranded the discard
the +1 had begun; the test now answers it first.

Auditing the remaining hand-rolled tails found no further dangling parks,
but all six reimplemented the shared epilogue and dropped parts of it. The
two that bite: Ad Nauseam and Sylvan Library lose life mid-resolution and
had no GameStatus.FINISHED guard, and the scry/surveil handler auto-passed
even when the resumed effects had opened a new prompt. All six now call
processMayAbilitiesThenAutoPass. PermanentAuctionService also dropped a
resolveAutoPass 